development of the former.

* mimeview

Old short option '-t' renamed to '-f' for consistency.
Thus, 'mimevief -f my.types' reads the file 'my.types'.

New option '--lint' (short '-t') instructs the tool to check the
syntax of the mime.types file and exit, ignoring any surplus command
line arguments.

Added support for priority and regex functions.

Debugging considerably improved.


Version 3.2 - 2017-03-11

* configuration syntax

Statements that allow for variable substitution also allow for command
expansion.  Commands are invoked the same way as in shell:

   $(command [args...])

The following commands are defined:

 - localpart X
     Treats X as an email address and returns its part preceding
     the @-sign.  If there is no @-sign, returns X unchanged.

 - domainpart X
     Treats X as an email address and returns the part following
     the @-sign.  If there is no @-sign, returns empty string.

 - shell CMD [ARGS...]
     Runs the shell command CMD with the given arguments.  Returns
     the standard output from the command.  The command is invoked
     using "/bin/sh -c" and can contain any valid shell construct.

* imap4d

Namespace configuration completely rewritten.  The "namespace" block
statement defines a particular namespaces.  Within it, one or more
"prefix" statements define prefixes available in that namespace, along
with their mappings to the server filesystem, hierarchy delimiters etc.

An example of namespace configuration:

     namespace personal {
        prefix "" {
           directory "$home/mailfolder";
        }
        prefix "#MH:" {
           directory "$home/Mail";
           delimiter "/";
           mailbox-type "mh";
        }
     }

The following configuration statements have been withdrawn: homedir,
personal-namespace, other-namespace, shared-namespace,
other-mailbox-mode, shared-mailbox-mode.

* mail

** Modifying attachment name and filename

Two new options are provided for modifying attachment name (a.k.a