@@ -149,6 +149,14 @@ Added support for priority and regex functions.
 
 Debugging considerably improved.
 
+* MH suite
+
+** Added support for Local-Mailbox profile setting
+
+** Fix whatnow edit command
+
+** Fix bug in comp, forw, and repl: Draft-Folder setting was ignored
+
 
 Version 3.2 - 2017-03-11
 
